refactor: replace mutes.get(0) with mutes.getFirst()